--- a/index.html
+++ b/index.html
@@ -2,33 +2,42 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuestros productos en realidad aumentada</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <style>
       body {
         margin: 0;
-        padding: 20px;
+        padding: 0;
         background-color: #000;
         color: white;
         font-family: sans-serif;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
         min-height: 100vh;
+      }
+
+      .container {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
       }
 
       h1 {
         font-size: 24px;
         text-align: center;
-        margin-top: 20px;
+        margin: 20px 0;
       }
 
       .buttons {
         display: flex;
         flex-direction: column;
         gap: 16px;
-        margin-top: 30px;
+        width: 100%;
+        max-width: 300px;
       }
 
       button {
@@ -39,6 +48,7 @@
         border: none;
         border-radius: 12px;
         cursor: pointer;
+        width: 100%;
       }
 
       model-viewer {
@@ -46,50 +56,64 @@
       }
 
       footer {
-        margin-top: 40px;
         text-align: center;
+        padding: 16px;
       }
 
       footer img {
-        width: 80px;
-        opacity: 0.7;
+        width: 70px;
+        opacity: 0.75;
+      }
+
+      @media (min-width: 768px) {
+        h1 {
+          font-size: 28px;
+        }
+
+        button {
+          font-size: 20px;
+        }
       }
     </style>
   </head>
   <body>
 
-    <h1>Nuestros productos en realidad aumentada</h1>
+    <div class="container">
+      <h1>Nuestros productos en realidad aumentada</h1>
 
-    <!-- Visor AR (compartido para todos los productos) -->
-    <model-viewer
-      id="arViewer"
-      ar
-      ar-modes="quick-look scene-viewer webxr"
-      auto-rotate
-      camera-controls
-      environment-image="https://modelviewer.dev/shared-assets/models/DamagedHelmet.glb"
-      exposure="4"
-      shadow-intensity="5"
-      shadow-softness="0.9"
-      alt="Producto en realidad aumentada"
-    ></model-viewer>
+      <model-viewer
+        id="arViewer"
+        ar
+        ar-modes="quick-look scene-viewer webxr"
+        auto-rotate
+        camera-controls
+        environment-image="https://modelviewer.dev/shared-assets/models/DamagedHelmet.glb"
+        exposure="4"
+        shadow-intensity="5"
+        shadow-softness="0.9"
+        alt="Producto en realidad aumentada"
+      ></model-viewer>
 
-    <!-- Botones para cada producto -->
-    <div class="buttons">
-      <button onclick="launchAR('Waffle.glb', 'Waffle.usdz')">Ver Waffle</button>
-      <button onclick="launchAR('cheesecake.glb', 'cheesecake.usdz')">Ver Cheesecake</button>
+      <div class="buttons">
+        <button onclick="launchAR('Waffle.glb', 'Waffle.usdz')">Ver Waffle</button>
+        <button onclick="launchAR('cheesecake.glb', 'cheesecake.usdz')">Ver Cheesecake</button>
+      </div>
     </div>
 
-    <!-- Pie de página con logo -->
     <footer>
       <img src="Logo.png" alt="Logo del café" />
     </footer>
 
     <script>
-      function launchAR(glb, usdz) {
+      async function launchAR(glb, usdz) {
         const viewer = document.getElementById('arViewer');
+
+        // Actualiza los archivos primero
         viewer.setAttribute('src', glb);
         viewer.setAttribute('ios-src', usdz);
+
+        // Espera un pequeño tiempo para que se apliquen los cambios antes de activar
+        await new Promise(resolve => setTimeout(resolve, 200));
 
         if (viewer.canActivateAR) {
           viewer.activateAR();
@@ -98,6 +122,5 @@
         }
       }
     </script>
-
   </body>
 </html>
